--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <!--[if IE 8 ]>    <html class="no-js ie8" lang="en"> <![endif]-->
 <!--[if (gte IE 9)|!(IE)]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
 <head>
+
 <meta charset="utf-8">
 <title></title>
 <meta name="description" content="">
@@ -21,15 +22,13 @@
 <!-- /ht Jeremy Keith - http://front.ie/mLXiaS -->
 <link rel="stylesheet" href="css/test.css" media="all">
 <link rel="stylesheet" href="css/layout.css" media="all and (min-width: 33.236em)">
-<link rel="stylesheet" href="css/book.css" media="all">
+<link rel="stylesheet" href="css/book2.css" media="all">
 <!-- 30em + (1.618em * 2) = 33.236em / Eliminates potential of horizontal scrolling in most cases -->
 
 <!--[if (lt IE 9) & (!IEMobile)]>
 <link rel="stylesheet" href="css/layout.css" media="all">
 <![endif]-->
-
-<script src="js/lib/modernizr-1.7.min.jsx"></script>
-  
+ 
 </head>
 
 <body>
@@ -41,7 +40,7 @@
 	<div class="slider-container">
 		
 		<div class="slider">
-			<ul class="slide-list">
+			<ul class="slide-list" id="slider">
 				
 			</ul>
 		</div>
@@ -50,7 +49,9 @@
 	<script src="js/lib/zepto.js"></script>
 	<script src="js/lib/W-0.1.5.min.js"></script>
 	<script src="js/epaper.js"></script>
+	<script src="js/ui.js"></script>
 	<script src="js/app.js"></script>
+    
 </body>
 
 </html>
