--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<link rel="stylesheet" href="epaper/css/small.css" media="all">
 		<link rel="stylesheet" href="epaper/css/medium.css" media="all and (min-width: 33.236em) and (max-width: 63.236em)">
 		<link rel="stylesheet" href="epaper/css/large.css" media="all and (min-width: 63.236em)">
-		<script src="js/lib/zepto.js"></script>
+		<script src="js/lib/zepto.min.js"></script>
 		<script src="js/epaper.js"></script>
 	</head>
 	<body>
