--- a/magazine/sidebar.html
+++ b/magazine/sidebar.html
@@ -1,56 +1,94 @@
 <ul id="sidebar-list">
 	<li id="page-0" class="sidebar-list-item">
-		<img class="item-image" src="magazine/images/sidebar/slide-1.jpg" />
+		<img class="item-image" src="magazine/images/sidebar/slide.gif" />
 		<p class="item-text">
-		Slide 1
+		Mr. Sherlock Holmes
 		</p>
 	</li>
 	<li id="page-1" class="sidebar-list-item">
-		<img class="item-image" src="magazine/images/sidebar/slide-1.jpg" />
+		<img class="item-image" src="magazine/images/sidebar/slide.gif" />
 		<p class="item-text">
-		Slide 2
+		The Science of Deduction
 		</p>
 	</li>
 	<li id="page-2" class="sidebar-list-item">
-		<img class="item-image" src="magazine/images/sidebar/slide-1.jpg" />
+		<img class="item-image" src="magazine/images/sidebar/slide.gif" />
 		<p class="item-text">
-		Slide 3
+		The Lauriston Garden Mystery
 		</p>
 	</li>
 	<li id="page-3" class="sidebar-list-item">
-		<img class="item-image" src="magazine/images/sidebar/slide-1.jpg" />
+		<img class="item-image" src="magazine/images/sidebar/slide.gif" />
 		<p class="item-text">
-		Slide 4
+		What John Rance Had to Tell
 		</p>
 	</li>
 	<li id="page-4" class="sidebar-list-item">
-		<img class="item-image" src="magazine/images/sidebar/slide-1.jpg" />
+		<img class="item-image" src="magazine/images/sidebar/slide.gif" />
 		<p class="item-text">
-		Slide 5
+		Our Advertisement Brings a Visitor
 		</p>
 	</li>
 	<li id="page-5" class="sidebar-list-item">
-		<img class="item-image" src="magazine/images/sidebar/slide-1.jpg" />
+		<img class="item-image" src="magazine/images/sidebar/slide.gif" />
 		<p class="item-text">
-		Slide 6
+		Tobias Gregson Shows What He Can Do
 		</p>
 	</li>
 	<li id="page-6" class="sidebar-list-item">
-		<img class="item-image" src="magazine/images/sidebar/slide-1.jpg" />
+		<img class="item-image" src="magazine/images/sidebar/slide.gif" />
 		<p class="item-text">
 		Slide 7
 		</p>
 	</li>
 	<li id="page-7" class="sidebar-list-item">
-		<img class="item-image" src="magazine/images/sidebar/slide-1.jpg" />
+		<img class="item-image" src="magazine/images/sidebar/slide.gif" />
 		<p class="item-text">
 		Slide 8
 		</p>
 	</li>
 	<li id="page-8" class="sidebar-list-item">
-		<img class="item-image" src="magazine/images/sidebar/slide-1.jpg" />
+		<img class="item-image" src="magazine/images/sidebar/slide.gif" />
 		<p class="item-text">
 		Slide 9
+		</p>
+	</li>
+	
+	<li id="page-9" class="sidebar-list-item">
+		<img class="item-image" src="magazine/images/sidebar/slide.gif" />
+		<p class="item-text">
+		Slide 10
+		</p>
+	</li>
+	<li id="page-10" class="sidebar-list-item">
+		<img class="item-image" src="magazine/images/sidebar/slide.gif" />
+		<p class="item-text">
+		Slide 11
+		</p>
+	</li>
+	<li id="page-11" class="sidebar-list-item">
+		<img class="item-image" src="magazine/images/sidebar/slide.gif" />
+		<p class="item-text">
+		Slide 12
+		</p>
+	</li>
+	
+	<li id="page-12" class="sidebar-list-item">
+		<img class="item-image" src="magazine/images/sidebar/slide.gif" />
+		<p class="item-text">
+		Slide 13
+		</p>
+	</li>
+	<li id="page-13" class="sidebar-list-item">
+		<img class="item-image" src="magazine/images/sidebar/slide.gif" />
+		<p class="item-text">
+		Slide 14
+		</p>
+	</li>
+	<li id="page-14" class="sidebar-list-item">
+		<img class="item-image" src="magazine/images/sidebar/slide.gif" />
+		<p class="item-text">
+		Slide 15
 		</p>
 	</li>
 </ul>
