--- a/magazine/3.html
+++ b/magazine/3.html
@@ -1,8 +1,8 @@
 <article>
-	<div class="page" class="chapter">
+	<div class="page">
 		<h1><div>The Lauriston Garden Mystery</div></h1>
 		
-	  <div class="content" class="chapter">
+	  <div class="content">
   	  <p>I confess that I was considerably startled by this fresh proof of the practical nature of my companion's theories. My respect for his power of analysis increased wondrously. There still remained some lurking suspicion in my mind, however, that the whole thing was a prearranged episode, intended to dazzle me, though what earthly object he could have in taking me in was past my comprehension. When I looked at him, he had finished reading the note, and his eyes had assumed the vacant, lack-lustre expression which showed mental abstraction.</p> 
       <p>"How in the world did you deduce that?" I asked.</p> 
       <p>"Deduce what?" said he, petulantly.</p> 
