--- a/magazine/4.html
+++ b/magazine/4.html
@@ -1,7 +1,7 @@
 <article>
-	<div class="page" class="chapter">
+	<div class="page">
 		<h1><div>What John Rance Had to Tell</div></h1>
-	  <div class="content" class="chapter">
+	  <div class="content">
   	  <p>It was one o'clock when we left No. 3, Lauriston Gardens. Sherlock Holmes led me to the nearest telegraph office, whence he dispatched a long telegram. He then hailed a cab, and ordered the driver to take us to the address given us by Lestrade.</p> 
       <p>"There is nothing like first-hand evidence," he remarked; "as a matter of fact, my mind is entirely made up upon the case, but still we may as well learn all that is to be learned."</p> 
       <p>"You amaze me, Holmes," said I. "Surely you are not as sure as you pretend to be of all those particulars which you gave."</p> 
