--- a/magazine/2.html
+++ b/magazine/2.html
@@ -1,6 +1,6 @@
 <article class="landscape">
-	<div class="page chapter">
-		<h1><div>The Science of Deduction</div></h1>
+	<div class="page">
+		<h1>The Science of Deduction</h1>
 	  <div class="content">
       	  <p>We met next day as he had arranged and inspected the rooms at No. 221B, Baker Street, of which he had spoken at our meeting. They consisted of a couple of comfortable bedrooms and a single large airy sitting-room, cheerfully furnished, and illuminated by two broad windows. So desirable in every way were the apartments, and so moderate did the terms seem when divided between us, that the bargain was concluded upon the spot, and we at once entered into possession. That very evening I moved my things round from the hotel, and on the following morning Sherlock Holmes followed me with several boxes and portmanteaus. For a day or two we were busily employed in unpacking and laying out our property to the best advantage. That done, we gradually began to settle down and to accommodate ourselves to our new surroundings.</p>
           <p>Holmes was certainly not a difficult man to live with. He was quiet in his ways, and his habits were regular. It was rare for him to be up after ten at night, and he had invariably breakfasted and gone out before I rose in the morning. Sometimes he spent his day at the chemical laboratory, sometimes in the dissecting rooms, and occasionally in long walks, which appeared to take him into the lowest portions of the city. Nothing could exceed his energy when the working fit was upon him; but now and again a reaction would seize him, and for days on end he would lie upon the sofa in the sitting-room, hardly uttering a word or moving a muscle from morning to night. On these occasions I have noticed such a dreamy, vacant expression in his eyes, that I might have suspected him of being addicted to the use of some narcotic, had not the temperance and cleanliness of his whole life forbidden such a notion.</p>
@@ -9,6 +9,14 @@
         </div>
 	</div>
 </article>
+
 <article class="portrait">
-portrait  modus
+	<div class="page">portrait  modus</div>
 </article>
+
+<ul class="image-slider">
+    <li>
+    
+    </li>
+</ul>
+
