--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
 		<button id="mg-sidebar-button-close">
 			<span>Schließen</span>
 		</button>
-		<script src="js/lib/zeptoxxx.js"></script>
+		<script src="js/lib/zepto.js"></script>
 		<script src="js/sel.js"></script>
 		<script src="js/lib/flicklist.js"></script>
 		<script src="js/lib/kinetic.js"></script>
-		<script src="js/magazine-closurexxx.js"></script>
+		<script src="js/magazine-closure.js"></script>
 	</body>
 </html>
