goto page, use iscroll

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 		</button>
 		<script src="js/lib/zepto.js"></script>
 		<script src="js/sel.js"></script>
+		<script src="js/lib/iscroll-lite.js"></script>
 		<script src="js/lib/flicklist.js"></script>
 		<script src="js/lib/kinetic.js"></script>
 		<script src="js/magazine-closure.js"></script>
