--- a/magazine/sidebar.html
+++ b/magazine/sidebar.html
@@ -15,7 +15,7 @@
         <li id="page-1" class="sidebar-list-item">
             <img class="item-image" src="magazine/images/sidebar/slide.gif" />
             <p class="item-text">
-            Artikel 2 The Science of Deduction
+            The Science of Deduction
             </p>
         </li>
         <li id="page-2" class="sidebar-list-item">
