--- a/magazine/6.html
+++ b/magazine/6.html
@@ -9,7 +9,7 @@
       <p>Sherlock Holmes and I read these notices over together at breakfast, and they appeared to afford him considerable amusement.</p> 
       <p>"I told you that, whatever happened, Lestrade and Gregson would be sure to score."</p> 
       <p>"That depends on how it turns out."</p> 
-      <img class="right" src="magazine/images/1-06-b.gif" />
+      <img width="255" height="384" class="right" src="magazine/images/1-06-b.gif" />
     </div>
 	</div>
 </article>
