--- a/test/magazine.html
+++ b/test/magazine.html
@@ -9,6 +9,7 @@
 <link rel="stylesheet" href="../magazine/css/small.css" media="all and (max-width: 33.236em)">
 <link rel="stylesheet" href="../magazine/css/medium.css" media="all and (min-width: 33.236em) and (max-width: 63.236em)">
 <link rel="stylesheet" href="../magazine/css/large.css" media="all and (min-width: 63.236em)">
+<link rel="stylesheet" href="../lib/video.js/video-js.css" media="all">
 <script type="text/javascript" src="qunit/qunit.js"></script>
 <!-- <script type="text/javascript" src="sinon.js/sinon.js"></script>
 <script type="text/javascript" src="sinon.js/sinon-qunit.js"></script>
@@ -40,10 +41,9 @@
 <div id="mg-sidebar"></div>
 <button id="mg-sidebar-button-open"><span>Menu</span></button>
 <button id="mg-sidebar-button-close"><span>Schließen</span></button>
-<script src="../js/lib/zepto.js"></script>
+<script src="../js/lib/zepto-8.1.js"></script>
 <script src="../js/lib/iscroll-lite.js"></script>
-<script src="../js/lib/flicklist.js"></script>
-<script src="../js/lib/kinetic.js"></script>
+<script src="../lib/video.js/video.js"></script>
 <script src="../js/magazine-closure.js"></script>
 <script src="magazine.js"></script>
 
