--- a/magazine/1.html
+++ b/magazine/1.html
@@ -3,9 +3,50 @@
 		<h1>Mr. Sherlock Holmes</h1>
     	  <div class="content">
       		<p>In the year 1878 I took my degree of Doctor of Medicine of the University of London, and proceeded to Netley to go through the course prescribed for surgeons in the army. Having completed my studies there, I was duly attached to the Fifth Northumberland Fusiliers as Assistant Surgeon. The regiment was stationed in India at the time, and before I could join it, the second Afghan war had broken out. On landing at Bombay, I learned that my corps had advanced through the passes, and was already deep in the enemy&#x27;s country. I followed, however, with many other officers who were in the same situation as myself, and succeeded in reaching Candahar in safety, where I found my regiment, and at once entered upon my new duties.</p>
+      		<div class="audio-container">
+                <audio class="audio" src="magazine/media/Roadrunner.mp3" preload="auto" />
+            </div>
+            <div class="mg-carousel" id="carousel-1">
+			  <ul class="mg-carousel-container">
+			    <li class="mg-carousel-item">
+			      <img src="magazine/images/1-01-b.gif" width="250" height="404" />
+			    </li>
+			    <li class="mg-carousel-item">
+			      <img src="magazine/images/1-02-a.gif" width="250" height="404"/>
+			    </li>
+			    <li class="mg-carousel-item">
+			      <img src="magazine/images/1-01-a.gif" width="250" height="404" />
+			    </li>
+                <li class="mg-carousel-item">
+                  <img src="magazine/images/1-01-b.gif" width="250" height="404" />
+                </li>
+                <li class="mg-carousel-item">
+                  <img src="magazine/images/1-02-a.gif" width="250" height="404"/>
+                </li>
+                <li class="mg-carousel-item">
+                  <img src="magazine/images/1-01-a.gif" width="250" height="404" />
+                </li>
+			  </ul>
+			  <div class="mg-carousel-indicator">
+			  	<label for="mg-carousel-item-1" class="active"></label>
+			  	<label for="mg-carousel-item-2"></label>
+			  	<label for="mg-carousel-item-3"></label>
+                <label for="mg-carousel-item-4"></label>
+                <label for="mg-carousel-item-5"></label>
+                <label for="mg-carousel-item-6"></label>
+			  </div>
+			</div>
+			
       		<p>The campaign brought honours and promotion to many, but for me it had nothing but misfortune and disaster. I was removed from my brigade and attached to the Berkshires, with whom I served at the fatal battle of Maiwand. There I was struck on the shoulder by a Jezail bullet, which shattered the bone and grazed the subclavian artery. I should have fallen into the hands of the murderous Ghazis had it not been for the devotion and courage shown by Murray, my orderly, who threw me across a pack-horse, and succeeded in bringing me safely to the British lines.</p>
-      		<img class="right" src="magazine/images/1-01-a.gif" />
+      		<img width="250" height="404" class="right" src="magazine/images/1-01-a.gif" />
       		<p>Worn with pain, and weak from the prolonged hardships which I had undergone, I was removed, with a great train of wounded sufferers, to the base hospital at Peshawar. Here I rallied, and had already improved so far as to be able to walk about the wards, and even to bask a little upon the verandah, when I was struck down by enteric fever, that curse of our Indian possessions. For months my life was despaired of, and when at last I came to myself and became convalescent, I was so weak and emaciated that a medical board determined that not a day should be lost in sending me back to England. I was dispatched, accordingly, in the troopship &quot;Orontes,&quot; and landed a month later on Portsmouth jetty, with my health irretrievably ruined, but with permission from a paternal government to spend the next nine months in attempting to improve it.</p>
+      		<div class="video-container">
+		          <video id="video_2" class="video-js vjs-default-skin video" controls preload="none"" width="100%" height="100%"
+		    	      poster=""
+		    	      data-setup="{"techOrder": ["html5", "flash"]}">
+		    	      <source src="http://systest.fornax.uberspace.de/epaper-reloaded/magazine/media/Bud_Light_Commercial.mp4" type='video/mp4' />
+		    	  </video>
+		    </div>
         </div>
 	</div>
 </article>
