--- a/magazine/1.html
+++ b/magazine/1.html
@@ -9,22 +9,22 @@
             <div class="mg-carousel" id="carousel-1">
 			  <ul class="mg-carousel-container">
 			    <li class="mg-carousel-item">
-			      <img src="magazine/images/1-01-b.gif" width="250" height="404" />
+			      <img src="magazine/images/1-01-b.gif" width="250" height="404" title="" alt="" data-large-image="magazine/images/1-01-b.gif" />
 			    </li>
 			    <li class="mg-carousel-item">
-			      <img src="magazine/images/1-02-a.gif" width="250" height="404"/>
+			      <img src="magazine/images/1-02-a.gif" width="250" height="404" title="" alt="" data-large-image="magazine/images/1-02-a.gif" />
 			    </li>
 			    <li class="mg-carousel-item">
-			      <img src="magazine/images/1-01-a.gif" width="250" height="404" />
+			      <img src="magazine/images/1-01-a.gif" width="250" height="404" title="" alt="" data-large-image="magazine/images/1-01-a.gif" />
 			    </li>
                 <li class="mg-carousel-item">
-                  <img src="magazine/images/1-01-b.gif" width="250" height="404" />
+                  <img src="magazine/images/1-01-b.gif" width="250" height="404" title="" alt="" data-large-image="magazine/images/1-01-b.gif" />
                 </li>
                 <li class="mg-carousel-item">
-                  <img src="magazine/images/1-02-a.gif" width="250" height="404"/>
+                  <img src="magazine/images/1-02-a.gif" width="250" height="404" title="" alt="" data-large-image="magazine/images/1-02-a.gif" />
                 </li>
                 <li class="mg-carousel-item">
-                  <img src="magazine/images/1-01-a.gif" width="250" height="404" />
+                  <img src="magazine/images/1-01-a.gif" width="250" height="404" title="" alt="" data-large-image="magazine/images/1-01-a.gif" />
                 </li>
 			  </ul>
 			  <div class="mg-carousel-indicator">
@@ -38,7 +38,9 @@
 			</div>
 			
       		<p>The campaign brought honours and promotion to many, but for me it had nothing but misfortune and disaster. I was removed from my brigade and attached to the Berkshires, with whom I served at the fatal battle of Maiwand. There I was struck on the shoulder by a Jezail bullet, which shattered the bone and grazed the subclavian artery. I should have fallen into the hands of the murderous Ghazis had it not been for the devotion and courage shown by Murray, my orderly, who threw me across a pack-horse, and succeeded in bringing me safely to the British lines.</p>
-      		<img width="250" height="404" class="right" src="magazine/images/1-01-a.gif" />
+      		<div class="mg-no-carousel">
+                <img width="250" height="404" class="right" src="magazine/images/1-01-a.gif" title="test title" alt="" data-large-image="magazine/images/1-01-a.gif" />
+            </div>
       		<p>Worn with pain, and weak from the prolonged hardships which I had undergone, I was removed, with a great train of wounded sufferers, to the base hospital at Peshawar. Here I rallied, and had already improved so far as to be able to walk about the wards, and even to bask a little upon the verandah, when I was struck down by enteric fever, that curse of our Indian possessions. For months my life was despaired of, and when at last I came to myself and became convalescent, I was so weak and emaciated that a medical board determined that not a day should be lost in sending me back to England. I was dispatched, accordingly, in the troopship &quot;Orontes,&quot; and landed a month later on Portsmouth jetty, with my health irretrievably ruined, but with permission from a paternal government to spend the next nine months in attempting to improve it.</p>
       		<div class="video-container">
 		          <video id="video_2" class="video-js vjs-default-skin video" controls preload="none"" width="100%" height="100%"
