--- a/magazine/sidebar.html
+++ b/magazine/sidebar.html
@@ -6,7 +6,7 @@
         </p>
     </div>
     <ul id="sidebar-category-content-0" class="sidebar-category-content">
-        <li id="page-0" class="sidebar-list-item">
+        <li id="page-0" class="sidebar-list-item sidebar-list-item-active">
             <img width="40" height="40" class="item-image" src="magazine/images/sidebar/slide.gif" />
             <p class="item-text">
             Mr. Sherlock Holmes
