--- a/magazine/6.html
+++ b/magazine/6.html
@@ -9,7 +9,9 @@
       <p>Sherlock Holmes and I read these notices over together at breakfast, and they appeared to afford him considerable amusement.</p> 
       <p>"I told you that, whatever happened, Lestrade and Gregson would be sure to score."</p> 
       <p>"That depends on how it turns out."</p> 
-      <img width="255" height="384" class="right" src="magazine/images/1-06-b.gif" />
+      <div class="mg-no-carousel">
+        <img width="255" height="384" class="right" src="magazine/images/1-06-b.gif" title="" alt="" data-large-image="magazine/images/1-06-b.gif" />
+      </div>
     </div>
 	</div>
 </article>
